--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "lerna": "^3.19.0"
   },
   "devDependencies": {
-    "@dxos/cli": "2.0.20-alpha.0",
-    "@dxos/cli-app": "2.0.20-alpha.0",
-    "@dxos/cli-bot": "2.0.20-alpha.0",
-    "@dxos/cli-data": "2.0.20-alpha.0",
-    "@dxos/cli-wns": "2.0.20-alpha.0",
+    "@dxos/cli": "0.1.13",
+    "@dxos/cli-app": "2.20.4",
+    "@dxos/cli-bot": "2.20.4",
+    "@dxos/cli-party": "2.20.4",
+    "@dxos/cli-dxns": "2.20.4",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-config-semistandard": "^15.0.0",
