--- a/packages/console-app/package.json
+++ b/packages/console-app/package.json
@@ -29,9 +29,18 @@
     "@apollo/react-components": "^3.1.5",
     "@apollo/react-hooks": "^3.1.5",
     "@babel/runtime": "^7.8.7",
-    "@dxos/debug": "^1.0.0-beta.2",
+    "@dxos/debug": "^1.0.0-beta.78",
     "@dxos/gem-core": "^1.0.0-beta.25",
-    "@dxos/react-ux": "^1.1.0-beta.0",
+    "@dxos/react-components": "~2.31.4",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/lab": "^5.0.0-alpha.51",
+    "@mui/material": "^5.0.0",
+    "@mui/styles": "^5.0.0",
+    "@mui/system": "^5.0.0",
+    "@mui/x-data-grid": "^5.0.0-beta.1",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.54",
@@ -39,7 +48,6 @@
     "@visx/network": "^1.0.0",
     "@visx/tooltip": "^1.0.0",
     "@visx/zoom": "^1.0.0",
-    "@wirelineio/registry-client": "^1.1.0-beta.2",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
@@ -53,8 +61,8 @@
     "lodash.defaultsdeep": "^4.6.1",
     "lodash.get": "^4.4.2",
     "moment": "^2.26.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "source-map-support": "^0.5.12"
