--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@dxos/console",
+  "name": "laconic-console",
   "version": "1.2.9-alpha.0",
-  "description": "Console",
+  "description": "Laconic Console",
   "main": "index.js",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "sort-package-json": "lerna exec npx sort-package-json",
     "test": "lerna run test"
   },
-  "author": "DXOS.org",
+  "author": "",
   "license": "AGPLv3",
   "workspaces": {
     "packages": [
@@ -30,11 +30,6 @@
     "lerna": "^3.19.0"
   },
   "devDependencies": {
-    "@dxos/cli": "0.1.13",
-    "@dxos/cli-app": "2.20.4",
-    "@dxos/cli-bot": "2.20.4",
-    "@dxos/cli-party": "2.20.4",
-    "@dxos/cli-dxns": "2.20.4",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-config-semistandard": "^15.0.0",
