--- a/packages/console-app/config-local.yml
+++ b/packages/console-app/config-local.yml
@@ -5,7 +5,7 @@
 
 app:
   title: 'Console'
-  org': 'Laconic.org'
+  org': 'Laconic'
   theme: 'dark'
   website: 'https://laconic.com'
   publicUrl: '/console'
