--- a/packages/console-app/package.json
+++ b/packages/console-app/package.json
@@ -29,9 +29,9 @@
     "@apollo/react-components": "^3.1.5",
     "@apollo/react-hooks": "^3.1.5",
     "@babel/runtime": "^7.8.7",
-    "@lirewine/debug": "^1.0.0-beta.78",
-    "@lirewine/gem-core": "^1.0.0-beta.25",
-    "@lirewine/react-ux": "1.1.0-beta.0",
+    "@dxos/debug": "^1.0.0-beta.78",
+    "@dxos/gem-core": "^1.0.0-beta.25",
+    "@dxos/react-ux": "https://github.com/dxos-deprecated/sdk.git#v1.1.0-beta.0",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.54",
