--- a/packages/console-app/package.json
+++ b/packages/console-app/package.json
@@ -32,7 +32,7 @@
     "@cerc-io/laconic-sdk": "0.1.4",
     "@dxos/debug": "^1.0.0-beta.78",
     "@dxos/gem-core": "^1.0.0-beta.25",
-    "@dxos/react-ux": "https://github.com/dxos-deprecated/sdk.git#v1.1.0-beta.0",
+    "@lirewine/react-ux": "1.1.0-beta.0",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.54",
