--- a/packages/console-app/package.json
+++ b/packages/console-app/package.json
@@ -29,9 +29,10 @@
     "@apollo/react-components": "^3.1.5",
     "@apollo/react-hooks": "^3.1.5",
     "@babel/runtime": "^7.8.7",
+    "@cerc-io/laconic-sdk": "0.1.4",
     "@dxos/debug": "^1.0.0-beta.78",
     "@dxos/gem-core": "^1.0.0-beta.25",
-    "@dxos/react-ux": "https://github.com/dxos-deprecated/sdk.git#v1.1.0-beta.0",
+    "@lirewine/react-ux": "1.1.0-beta.0",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.54",
@@ -87,6 +88,7 @@
     "eslint-plugin-jsdoc": "^21.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-standard": "^4.0.1",
+    "graphql": "^15.0.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^24.8.0",
     "react-scripts": "^3.4.1",
