Use published debug and gem-core packages (#17)
* Remove dxos packages

* Use published debug and gem-core packages

* Update readme after laconicd chain ID change

--- a/packages/console-app/package.json
+++ b/packages/console-app/package.json
@@ -30,8 +30,8 @@
     "@apollo/react-hooks": "^3.1.5",
     "@babel/runtime": "^7.8.7",
     "@cerc-io/laconic-sdk": "0.1.4",
-    "@dxos/debug": "^1.0.0-beta.78",
-    "@dxos/gem-core": "^1.0.0-beta.25",
+    "@lirewine/debug": "1.0.0-beta.78",
+    "@lirewine/gem-core": "1.0.0-beta.28",
     "@lirewine/react-ux": "1.1.0-beta.0",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
