--- a/packages/console-app/package.json
+++ b/packages/console-app/package.json
@@ -53,6 +53,7 @@
     "lodash.defaultsdeep": "^4.6.1",
     "lodash.get": "^4.4.2",
     "moment": "^2.26.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
@@ -91,7 +92,7 @@
     "graphql": "^15.0.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^24.8.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^5.0.1",
     "semistandard": "^14.2.0",
     "webpack": "^5.76.2",
     "webpack-bundle-analyzer": "^4.8.0",
