--- a/package.json
+++ b/package.json
@@ -1,39 +1,87 @@
 {
-  "name": "laconic-console",
-  "version": "1.2.9-alpha.0",
-  "description": "Laconic Console",
-  "main": "index.js",
-  "private": true,
+  "name": "@cerc-io/console-app",
+  "version": "1.2.9",
+  "description": "Kubenet Console Client",
+  "repository": "https://github.com/cerc-io/laconic-console",
+  "main": "dist/es/index.js",
+  "files": [
+    "src/gql"
+  ],
   "scripts": {
-    "build": "lerna run build",
-    "clean": "lerna run clean",
-    "lint": "lerna run lint",
-    "lint:fix": "lerna run lint -- --fix",
-    "lint:staged": "lint-staged",
-    "sort-package-json": "lerna exec npx sort-package-json",
-    "test": "lerna run test"
+    "analyzer": "webpack --config webpack-analyzer.config.js",
+    "build": "yarn dist",
+    "build:babel": "babel ./src --out-dir ./dist/es --ignore \"**/*.test.js\" --source-maps inline",
+    "clean": "rm -rf dist",
+    "dist": "yarn clean && yarn build:babel && CONFIG_FILE=config-production.yml webpack",
+    "lint": "semistandard 'src/**/*.js'",
+    "start": "CONFIG_FILE=${CONFIG_FILE:-config-testnet.yml} VERBOSE=true webpack-dev-server --mode development",
+    "test": "jest --rootDir ./src --passWithNoTests --no-cache"
   },
   "author": "",
-  "license": "AGPLv3",
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
-  },
+  "license": "GPL-3.0",
   "browserslist": [
-    "> 5%"
+    "> 2%"
   ],
   "jest": {
     "testEnvironment": "node"
   },
   "dependencies": {
-    "lerna": "^3.19.0"
+    "@apollo/react-components": "^3.1.5",
+    "@apollo/react-hooks": "^3.1.5",
+    "@babel/runtime": "^7.8.7",
+    "@cerc-io/laconic-sdk": "0.1.6",
+    "@lirewine/debug": "1.0.0-beta.78",
+    "@lirewine/gem-core": "1.0.0-beta.28",
+    "@lirewine/react-ux": "1.1.0-beta.0",
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.54",
+    "@rehooks/component-size": "^1.0.3",
+    "@visx/network": "^1.0.0",
+    "@visx/tooltip": "^1.0.0",
+    "@visx/zoom": "^1.0.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "build-url": "^2.0.0",
+    "clsx": "^1.1.0",
+    "compare-versions": "^3.6.0",
+    "d3-force": "^2.1.1",
+    "debug": "^4.1.1",
+    "graphql-tag": "^2.10.3",
+    "lodash.defaultsdeep": "^4.6.1",
+    "lodash.get": "^4.4.2",
+    "moment": "^2.26.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "source-map-support": "^0.5.12"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
+    "@babel/cli": "7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@webpack-cli/info": "^2.0.1",
+    "@webpack-cli/init": "^1.1.3",
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-add-module-exports": "^1.0.2",
+    "babel-plugin-import-graphql": "^2.7.0",
+    "babel-plugin-inline-import": "^3.0.0",
+    "babel-plugin-inline-json-import": "^0.3.2",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^6.7.2",
     "eslint-config-semistandard": "^15.0.0",
     "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-jsx": "^8.1.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
@@ -41,14 +89,32 @@
     "eslint-plugin-jsdoc": "^21.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-standard": "^4.0.1",
-    "lint-staged": "^9.5.0",
-    "webpack-cli": "^5.0.1"
+    "graphql": "^15.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^24.8.0",
+    "react-scripts": "^5.0.1",
+    "semistandard": "^14.2.0",
+    "webpack": "^5.76.2",
+    "webpack-bundle-analyzer": "^4.8.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.1",
+    "webpack-merge": "^5.8.0",
+    "webpack-version-file-plugin": "^0.5.0",
+    "yaml-loader": "^0.8.0"
+  },
+  "peerDependencies": {
+    "react": "16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
     "extends": [
       "plugin:jest/recommended",
-      "semistandard"
+      "semistandard",
+      "standard-jsx"
     ],
     "plugins": [
       "babel"
