--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cerc-io/console-app",
   "version": "1.2.9",
-  "description": "Kubenet Console Client",
+  "description": "Laconic Console",
   "repository": "https://github.com/cerc-io/laconic-console",
   "main": "dist/es/index.js",
   "files": [
@@ -69,7 +69,6 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@webpack-cli/info": "^2.0.1",
-    "@webpack-cli/init": "^1.1.3",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.0",
