--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
     "@apollo/react-components": "^4.0.0",
     "@apollo/react-hooks": "^4.0.0",
     "@babel/runtime": "^7.21.0",
@@ -40,10 +41,6 @@
     "@visx/network": "^1.0.0",
     "@visx/tooltip": "^1.0.0",
     "@visx/zoom": "^1.0.0",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
-    "apollo-link-http": "^1.5.17",
     "build-url": "^2.0.0",
     "clsx": "^1.1.0",
     "compare-versions": "^3.6.0",
