--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@cerc-io/console-app",
-  "version": "1.2.9",
+  "version": "1.3.0",
   "description": "Laconic Console",
   "repository": "https://github.com/cerc-io/laconic-console",
   "main": "dist/es/index.js",
   "files": [
-    "src/gql"
+    "dist/*", "src/*"
   ],
   "scripts": {
     "analyzer": "webpack --config webpack-analyzer.config.js",
