--- a/config-hosted.yml
+++ b/config-hosted.yml
@@ -3,15 +3,17 @@
 # NOTE: Set CONFIG_FILE to swap out this config file.
 #
 
+# TODO: write a tool to automated insertion of the template strings in files like this.
+
 app:
   title: 'Console'
   org': 'Laconic'
   theme: 'dark'
-  website: 'LACONIC_HOSTED_CONFIG_APP_WEBSITE' # e.g. https://laconic.com
+  website: 'LACONIC_HOSTED_CONFIG_app_website' # e.g. https://laconic.com
   publicUrl: '/console'
 
 api:
-  server: 'LACONIC_HOSTED_CONFIG_API_SERVER' # e.g. http://127.0.0.1:9004
+  server: 'LACONIC_HOSTED_CONFIG_api_server' # e.g. http://127.0.0.1:9004
   path: '/api'
   intervalLog: 5000
   pollInterval: 10000
@@ -22,19 +24,19 @@ system:
 services:
   app:
     prefix: '/app'
-    server: 'LACONIC_HOSTED_CONFIG_SERVICES_APP_SERVER' # e.g. http://127.0.0.1:5999
+    server: 'LACONIC_HOSTED_CONFIG_services_app_server' # e.g. http://127.0.0.1:5999
 
   wns:
-    server: 'LACONIC_HOSTED_CONFIG_SERVICES_WNS_SERVER' # e.g. http://127.0.0.1:9473/api
-    webui: 'LACONIC_HOSTED_CONFIG_SERVICES_WNS_WEBUI' # e.g. http://127.0.0.1:9473/console
+    server: 'LACONIC_HOSTED_CONFIG_services_wns_server' # e.g. http://127.0.0.1:9473/api
+    webui: 'LACONIC_HOSTED_CONFIG_services_wns_webui' # e.g. http://127.0.0.1:9473/console
 
   signal:
-    server: 'LACONIC_HOSTED_CONFIG_SERVICES_SIGNAL_SERVER' # e.g. ws://127.0.0.1:4000
-    api: 'LACONIC_HOSTED_CONFIG_SERVICES_SIGNAL_API' # e.g. http://127.0.0.1:4000/api
+    server: 'LACONIC_HOSTED_CONFIG_services_signal_server' # e.g. ws://127.0.0.1:4000
+    api: 'LACONIC_HOSTED_CONFIG_services_signal_api' # e.g. http://127.0.0.1:4000/api
 
   ipfs:
-    server: 'LACONIC_HOSTED_CONFIG_SERVICES_IPFS_SERVER' # e.g. http://127.0.0.1:5001
-    gateway: 'LACONIC_HOSTED_CONFIG_SERVICES_IPFS_GATEWAY' # e.g. http://127.0.0.1:8888/ipfs/
+    server: 'LACONIC_HOSTED_CONFIG_services_ipfs_server' # e.g. http://127.0.0.1:5001
+    gateway: 'LACONIC_HOSTED_CONFIG_services_ipfs_gateway' # e.g. http://127.0.0.1:8888/ipfs/
 
   wellknown:
-    endpoint: 'LACONIC_HOSTED_CONFIG_SERVICES_WELLKNOWN_ENDPOINT' # e.g. http://127.0.0.1:9000/.well-known/laconic
+    endpoint: 'LACONIC_HOSTED_CONFIG_services_wellknown_endpoint' # e.g. http://127.0.0.1:9000/.well-known/laconic
