--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cerc-io/console-app",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "Laconic Console",
   "repository": "https://github.com/cerc-io/laconic-console",
   "main": "dist/es/index.js",
@@ -30,7 +30,7 @@
     "@apollo/react-components": "^4.0.0",
     "@apollo/react-hooks": "^4.0.0",
     "@babel/runtime": "^7.21.0",
-    "@cerc-io/laconic-sdk": "0.1.6",
+    "@cerc-io/laconic-sdk": "^0.1.14",
     "@lirewine/debug": "1.0.0-beta.78",
     "@lirewine/gem-core": "1.0.0-beta.28",
     "@lirewine/react-ux": "1.1.0-beta.1",
