--- a/config-local.yml
+++ b/config-local.yml
@@ -5,7 +5,7 @@
 
 app:
   title: 'Console'
-  org': 'Laconic'
+  org: 'Laconic'
   theme: 'dark'
   website: 'https://laconic.com'
   publicUrl: '/console'
